<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_servers"
        android:icon="@drawable/ic_servers"
        app:showAsAction="ifRoom"
        android:title="@string/nav_servers" />
    <item
        android:id="@+id/nav_scanner"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        android:title="@string/nav_scanner" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"
        android:title="@string/nav_settings" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_info"
        app:showAsAction="never"
        android:title="@string/nav_about" />
</menu>
